--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.21.1",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.18"
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^7.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "serverless-http": "^2.7.0"
   }
 }
