Modifications to backend for deploying

--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,9 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "serverless-http": "^2.7.0"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "7.5.2"
   }
 }
