--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-select": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
