--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "^4.2.1"
+    "react-select": "^4.2.1",
+    "react-toastify": "^7.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
